--- a/src/components/TypingContainer/TypingContainer.css
+++ b/src/components/TypingContainer/TypingContainer.css
@@ -1,8 +1,34 @@
-.typingContainer {
+.typingContainer {}
 
+.wrap {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
+
+.focus {
+  position: absolute;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility, opacity .3s ease-in-out;
+}
+
+.visible {
+  opacity: 0;
+  visibility: hidden;
+}
+
 .words {
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 2px 10px;
+  font-family: 'Ubuntu Mono Regular';
+  font-size: 20px;
+  filter: none;
+  transition: filter .3s ease-in-out;
+}
+
+.blured {
+  filter: blur(4px);
 }
